[package]
name = "brawlstars_proxy"
version = "0.1.0"
edition = "2021"
authors = ["Tuo Nome <tuo@email.com>"]
description = "Micro‑server Rust/Axum per fare da proxy all'API di Brawl Stars"
license = "MIT"
repository = "https://github.com/tuo-utente/nuovo-repo"

[dependencies]
# Framework web leggero e asincrono
axum = "0.8"

# Runtime async
tokio = { version = "1.37", features = ["full"] }

# HTTP client per chiamate outgoing
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }

# Caricamento variabili d'ambiente da .env
dotenv = "0.15"