[package]
name = "brawlstars_proxy"
version = "0.1.0"
edition = "2021"
authors = ["Tuo Nome <tuo@email.com>"]
description = "Micro‑server Rust/Axum per fare da proxy all'API di Brawl Stars"
license = "MIT"
repository = "https://github.com/tuo-utente/nuovo-repo"

[dependencies]
axum = "0.8"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"